# gba-sprite-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
project/battlemap/: CMakeLists.txt
project/battlemap/img/: GizaPlainsMap.c  GizaPlainsMap.h  GizaPlainsMapCrop.h  GizaPlainsTiles.c  GizaPlainsTiles.pcx  GizaPlainsTilesCrop.c  GizaPlainsTilesCrop.h  GizaPlainsTilesCrop.xcf  MainMenuBackground.c  MainMenuBackground.h  MainMenuBackground.s  MainMenuBackground.xcf  PlainsTilemap.c  PlainsTiles.c  PlainsTiles.tsx  Tile.h  TileSelection.c  TileSelection.h  TileSelector.xcf  TilesGizaPlainsFFTA.xcf  battlegrounds.xcf  broadsword.c  broadsword.h  fighter.c  fighter.h  fighter.s  fighter.xcf  flying_stuff_bg.c  flying_stuff_bg.h  plains.c  plains.tmx  plains.xcf  plains_tiles.c  plains_tiles.s  shared.c  shared.h  shared.s  soldier.c  soldier.h  soldier.s  (+18 more)
project/battlemap/img/backup/: soldierTest.c  soldierTest.s
project/battlemap/img/backup_256/: GizaPlainsMap.c  GizaPlainsMap.xcf  GizaPlainsMapFull.xcf  Tile.c  Tile.xcf  (+9 more)
project/battlemap/music/: fade1.h  main.raw
project/battlemap/src/: BattlemapScene.cpp  BattlemapScene.h  Broadsword.h  CharacterBase.cpp  CharacterBase.h  Enemy.cpp  Enemy.h  Fighter.h  ForegroundPalette.h  MainMenuBackground.h  MainMenuScene.cpp  MainMenuScene.h  MenuManager.cpp  MenuManager.h  MenuObject.cpp  MenuObject.h  ObjectBase.cpp  ObjectBase.h  Plains.h  Player.cpp  Player.h  Soldier.h  SoldierBlue.h  SoldierRed.h  TileSelection.cpp  TileSelection.h  TileSelectionData.h  TileSystemBase.cpp  TileSystemBase.h  main.cpp  plains.h  soldier.h
(+32 files in other folders)
